--- a/.gitignore
+++ b/.gitignore
@@ -36,8 +36,9 @@ env/
 
 # Environment variables
 .env
+.env.kali
 
-# Certificates and private keys (NEVER commit these!)
+# Certificates and private keys
 certs/*.pem
 certs/*.key
 certs/*.crt
